--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <!-- <section class="doing">
+      <section class="doing hide">
         <div class="container">
           <h2 class="doing-main-head main-head">Чем мы занимаемся</h2>
           <ul class="examples-list list">
@@ -160,9 +160,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Наша команда -->
-      <!-- <section class="team main-section">
+      <section class="team main-section">
         <div class="container">
           <h2 class="team-main-head main-head">Наша команда</h2>
           <ul class="card list">
@@ -332,8 +332,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="clients main-section">
+      </section>
+      <!-- Клиенты -->
+      <section class="clients main-section">
         <div class="container">
           <h2 class="clients-main-head main-head">Постоянные клиенты</h2>
           <ul class="clients-list list">
@@ -381,7 +382,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="footer-container container">
