--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     </header> -->
     <main>
       <!-- Герой -->
-      <!-- <section class="hero main-section">
+      <section class="hero main-section">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button" data-modal-open>
           Заказать услугу
         </button>
-      </section> -->
+      </section>
       <!-- Приимущества -->
       <section class="assets main-section">
         <div class="container">
@@ -130,13 +130,13 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <section class="doing hide">
+      <section class="doing">
         <div class="container">
           <h2 class="doing-main-head main-head">Чем мы занимаемся</h2>
           <ul class="examples-list list">
             <li class="examples-items">
               <img
-                src="images/img1.jpg"
+                src="images/doing1.jpg"
                 alt="руки на клавиатуре и экран планшета с кодом"
                 width="370"
               />
@@ -144,7 +144,7 @@
             </li>
             <li class="examples-items">
               <img
-                src="images/img2.jpg"
+                src="images/doing2.jpg"
                 alt="рука с телефоном и экран ноутбука с изображением телефонов"
                 width="370"
               />
@@ -152,7 +152,7 @@
             </li>
             <li class="examples-items">
               <img
-                src="images/img3.jpg"
+                src="images/doing3.jpg"
                 alt="планшет с палитрой цветов на экране"
                 width="370"
               />
@@ -168,7 +168,7 @@
           <ul class="card list">
             <li class="card-items">
               <img
-                src="images/img4.jpg"
+                src="images/our-team1.jpg"
                 alt="улыбающийся мужчина в рубашке с бородой и в очках"
                 width="270"
               />
@@ -209,7 +209,7 @@
             </li>
             <li class="card-items">
               <img
-                src="images/img5.jpg"
+                src="images/our-team2.jpg"
                 alt="улыбающаяся девушка с белыми волосами в очках"
                 width="270"
               />
@@ -250,7 +250,7 @@
             </li>
             <li class="card-items">
               <img
-                src="images/img6.jpg"
+                src="images/our-team3.jpg"
                 alt="улыбающийся мужчина в рубашке смотрит в сторону"
                 width="270"
               />
@@ -291,7 +291,7 @@
             </li>
             <li class="card-items">
               <img
-                src="images/img7.jpg"
+                src="images/our-team4.jpg"
                 alt="брюнет в футболке и очках с ухмылкой"
                 width="270"
               />
