--- a/Портфолио.html
+++ b/Портфолио.html
@@ -105,7 +105,7 @@
               <a class="portfolio-link link" href="">
                 <div class="portfolio-link-conteiner">
                   <img
-                    src="./images-hw2/img-min.jpg "
+                    src="./images/portfolio1.jpg "
                     alt="женщина, мужчина и женщина на экране ноутбука "
                     width="370"
                   />
@@ -125,7 +125,7 @@
               <a class="portfolio-link link" href=""
                 ><div class="portfolio-link-conteiner">
                   <img
-                    src="./images-hw2/img-min1.jpg"
+                    src="./images/portfolio2.jpg"
                     alt="два баскетболиста в пржыке боряться за мяч"
                     width="370"
                   />
@@ -147,7 +147,7 @@
               <a class="portfolio-link link" href="">
                 <div class="portfolio-link-conteiner">
                   <img
-                    src="./images-hw2/img-min2.jpg"
+                    src="./images/portfolio3.jpg"
                     alt="Логотип ресторана Seafood на котором изображена рыба "
                     width="370"
                   />
@@ -167,7 +167,7 @@
               <a class="portfolio-link link" href="">
                 <div class="portfolio-link-conteiner">
                   <img
-                    src="./images-hw2/img-min3.jpg"
+                    src="./images/portfolio4.jpg"
                     alt="Черные наушники"
                     width="370"
                   />
@@ -188,7 +188,7 @@
               <a class="portfolio-link link" href="">
                 <div class="portfolio-link-conteiner">
                   <img
-                    src="./images-hw2/img-min4.jpg"
+                    src="./images/portfolio5.jpg"
                     alt="Бежевая и белая коробки"
                     width="370"
                   />
@@ -208,7 +208,7 @@
               <a class="portfolio-link link" href="">
                 <div class="portfolio-link-conteiner">
                   <img
-                    src="./images-hw2/img-min5.jpg"
+                    src="./images/portfolio6.jpg"
                     alt="Монитор компьютера Apple с изображением карты"
                     width="370"
                   />
@@ -228,7 +228,7 @@
               <a class="portfolio-link link" href=""
                 ><div class="portfolio-link-conteiner">
                   <img
-                    src="./images-hw2/img-min6.jpg"
+                    src="./images/portfolio7.jpg"
                     alt="открытый журнал"
                     width="370"
                   />
@@ -248,7 +248,7 @@
               <a class="portfolio-link link" href="">
                 <div class="portfolio-link-conteiner">
                   <img
-                    src="./images-hw2/img-min7.jpg"
+                    src="./images/portfolio8.jpg"
                     alt="бирка с надписью Label tag"
                     width="370"
                   />
@@ -268,7 +268,7 @@
               <a class="portfolio-link link" href="/">
                 <div class="portfolio-link-conteiner">
                   <img
-                    src="./images-hw2/img-min8.jpg"
+                    src="./images/portfolio9.jpg"
                     alt="человек с планшетом в руках на экране ноутбука"
                     width="370"
                   />
