--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-link-logo link" href="/">
@@ -61,8 +61,68 @@
             >
           </li>
         </ul>
+        <button type="button" class="menu-open-btn">
+          <svg class="menu-open-icon" width="40px" height="40px">
+            <use href="./images/icons.svg.svg#icon-menu-open"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+      <div class="mob-menu is-hidden">
+        <div class="container">
+          <button type="button" class="menu-close-btn">
+            <svg class="menu-close-icon" width="40px" height="40px">
+              <use href="./images/icons.svg.svg#icon-close"></use>
+            </svg>
+          </button>
+          <div class="mob-menu-top">
+            <ul class="mob-menu-list list">
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="./index.html"> Студия</a>
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="./Портфолио.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="#">Контакты</a>
+              </li>
+            </ul>
+          </div>
+          <div class="mob-menu-bottom">
+            <ul class="mob-menu-contacts list">
+              <li class="mob-menu-contacts-connect">
+                <a class="mob-menu-contacts-tell link" href="tel:+380961111111">
+                  +38 096 111 11 11</a
+                >
+              </li>
+              <li class="mob-menu-contacts-connect">
+                <a
+                  class="mob-menu-contacts-mail link"
+                  href="mailto:info@devstudio.com"
+                >
+                  info@devstudio.com
+                </a>
+              </li>
+            </ul>
+            <ul class="menu-social list">
+              <li class="menu-social-item">
+                <a href="#" class="menu-social-link link">Instagram</a>
+              </li>
+              <li class="menu-social-item">
+                <a href="#" class="menu-social-link link">Twitter</a>
+              </li>
+              <li class="menu-social-item">
+                <a href="#" class="menu-social-link link">Facebook</a>
+              </li>
+              <li class="menu-social-item">
+                <a href="#" class="menu-social-link link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
     <main>
       <!-- Герой -->
       <section class="hero main-section">
@@ -173,21 +233,21 @@
                     ./images/our-team1.jpg        1x,
                     ./images/our-team1-2x-min.jpg 2x
                   "
-                  media="max-width:1200px"
+                  media="(min-width:1200px)"
                 />
                 <source
                   srcset="
                     ./images/our-team1-tab-min.jpg    1x,
                     ./images/our-team1-tab-2x-min.jpg 2x
                   "
-                  media="max-width:768px"
+                  media="(min-width:768px)"
                 />
                 <source
                   srcset="
                     ./images/our-team1-mob-min.jpg    1x,
                     ./images/our-team1-mob-2x-min.jpg 2x
                   "
-                  media="max-width:480px"
+                  media="(min-width:480px)"
                 />
                 <img
                   src="images/our-team1.jpg"
@@ -237,21 +297,21 @@
                     ./images/our-team2.jpg        1x,
                     ./images/our-team2-2x-min.jpg 2x
                   "
-                  media="max-width:1200px"
+                  media="(min-width:1200px)"
                 />
                 <source
                   srcset="
                     ./images/our-team2-tab-min.jpg    1x,
                     ./images/our-team2-tab-2x-min.jpg 2x
                   "
-                  media="max-width:768px"
+                  media="(min-width:768px)"
                 />
                 <source
                   srcset="
                     ./images/our-team2-mob-min.jpg    1x,
                     ./images/our-team2-mob-2x-min.jpg 2x
                   "
-                  media="max-width:480px"
+                  media="(min-width:480px)"
                 />
                 <img
                   src="images/our-team2.jpg"
@@ -301,21 +361,21 @@
                     ./images/our-team3.jpg        1x,
                     ./images/our-team3-2x-min.jpg 2x
                   "
-                  media="max-width:1200px"
+                  media="(min-width:1200px)"
                 />
                 <source
                   srcset="
                     ./images/our-team3-tab-min.jpg    1x,
                     ./images/our-team3-tab-2x-min.jpg 2x
                   "
-                  media="max-width:768px"
+                  media="(min-width:768px)"
                 />
                 <source
                   srcset="
                     ./images/our-team3-mob-min.jpg    1x,
                     ./images/our-team3-mob-2x-min.jpg 2x
                   "
-                  media="max-width:480px"
+                  media="(min-width:480px)"
                 />
                 <img
                   src="images/our-team3.jpg"
@@ -366,21 +426,21 @@
                     ./images/our-team4.jpg        1x,
                     ./images/our-team4-2x-min.jpg 2x
                   "
-                  media="max-width:1200px"
+                  media="(min-width:1200px)"
                 />
                 <source
                   srcset="
                     ./images/our-team4-tab-min.jpg    1x,
                     ./images/our-team4-tab-2x-min.jpg 2x
                   "
-                  media="max-width:768px"
+                  media="(min-width:768px)"
                 />
                 <source
                   srcset="
                     ./images/our-team4-mob-min.jpg    1x,
                     ./images/our-team4-mob-2x-min.jpg 2x
                   "
-                  media="max-width:480px"
+                  media="(min-width:480px)"
                 />
                 <img
                   src="images/our-team4.jpg"
@@ -628,5 +688,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
