--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+     <header class="header"> 
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-link-logo link" href="/">
             <span class="logo-header">Web</span>Studio
           </a>
-
+          
           <ul class="header-list list">
             <li class="header-item">
               <a class="header-link link anderline" href="./index.html">
@@ -46,7 +46,7 @@
               class="header-contacts-mail link"
               href="mailto:info@devstudio.com"
             >
-              <svg class="header-contacts-mail-icon">
+              <svg class="header-contacts-mail-icon" width="16px" height="12px">
                 <use href="./images/icons.svg.svg#icon-header-envelope"></use>
               </svg>
               info@devstudio.com
@@ -54,13 +54,14 @@
           </li>
           <li class="header-contacts-connect">
             <a class="header-contacts-tell link" href="tel:+380961111111">
-              <svg class="header-contacts-tell-icon">
+              <svg class="header-contacts-tell-icon" width="10px" height="16px">
                 <use href="./images/icons.svg.svg#icon-header-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
           </li>
         </ul>
+        </div>
         <button type="button" class="menu-open-btn">
           <svg class="menu-open-icon" width="40px" height="40px">
             <use href="./images/icons.svg.svg#icon-menu-open"></use>
@@ -122,7 +123,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> 
     <main>
       <!-- Герой -->
       <section class="hero main-section">
@@ -537,13 +538,13 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer-container container">
+        <div class="footer-nav-container">
         <div class="footer-container-studio">
           <a class="footer-link link" href="/">
             <span class="logo-footer">Web</span>Studio</a
           >
-
           <address class="footer-address">
             г. Киев, пр-т Леси Украинки, 26
           </address>
@@ -593,6 +594,7 @@
             </li>
           </ul>
         </div>
+        </div>
         <div class="footer-input-wrape">
           <p class="footer-input-title">Подпишитесь на рассылку</p>
           <form class="footer-form">
@@ -611,7 +613,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
