--- a/Портфолио.html
+++ b/Портфолио.html
@@ -32,12 +32,12 @@
           
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link anderline" href="./index.html">
+              <a class="header-link link " href="./index.html">
                 Студия</a
               >
             </li>
             <li class="header-item">
-              <a class="header-link link" href="./Портфолио.html">Портфолио</a>
+              <a class="header-link link anderline" href="./Портфолио.html">Портфолио</a>
             </li>
             <li class="header-item">
               <a class="header-link link" href="#">Контакты</a>
@@ -638,5 +638,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
